# migrator

./: .gitignore  Makefile  README.md  docker-compose.yml  local_config.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: engineer_issue.md
.github/workflows/: build.yml
migration/postgres/: 29032023214851_init_tables.sql  29032023214901_fill_tables.sql
migration/sqlite/: 30032023224442_init_tables.sql  30032023224515_fill_tables.sql
migrator/: main.py
migrator/cmd/: main.py
migrator/internal/log/: log.py
migrator/internal/parser/: exception.py  parser.py
migrator/internal/processor/: processor.py
migrator/internal/repository/: abstract.py  postgres.py  postgres_meta_migration.py  sql.py  sqlite.py  sqlite_meta_migration.py
tests/test_internal/test_parser/: test_exception.py  test_parser.py
tests/test_internal/test_repository/: common.py  test_postgres.py  test_sqlite.py
tests/test_internal/test_tepository/: test_abstract.py  test_postgres.py  test_postgres_meta_migration.py  test_sqlite.py  test_sqlite_meta_migration.py
