[tool.poetry]
name = "migrator"
version = "0.1.0"
description = "Tool for db migrations."
authors = ["zigal0 <zigal0.bc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"
mypy = "^1.1.1"
pylint = "^2.17.1"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
pytest-postgresql = "^4.1.1"
psycopg = "^3.1.8"
types-psycopg2 = "^2.9.21.9"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
